--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
+roles_path = ./ansible/roles
+inventory = ./inventory/hosts.ini
 nocows = True
-inventory = inventory.ini
-roles_path: ./roles
