ps cmds to use wsl dir not local + become:true for write permissions

--- a/ansible/playbooks/local_backup.yml
+++ b/ansible/playbooks/local_backup.yml
@@ -1,5 +1,6 @@
 ---
 - name: Setup local backup plan
   hosts: localhost
+  become: true  # Add this line to run as root
   roles:
     - role: backup
