--- a/ansible/roles/backup/tasks/main.yml
+++ b/ansible/roles/backup/tasks/main.yml
@@ -15,9 +15,12 @@
     src: backup_config.j2
     dest: /etc/backup_config.conf
 
-- name: Schedule backup job
-  cron:
-    name: "Backup Job"
-    minute: "0"
-    hour: "2"
-    job: "/usr/local/bin/backup_script.sh"
+# - name: Schedule backup job
+#   cron:
+#     name: "Backup Job"
+#     minute: "0"
+#     hour: "2"
+#     job: "/usr/local/bin/backup_script.sh"
+
+- name: Run backup script immediately
+  command: /usr/local/bin/backup_script.sh
